--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+body{
+  background-image: url("../images/raindrops.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 #container{
   margin: 5px;
   width: 100%;
@@ -44,7 +49,7 @@ h1 {
 #counterRender{
   height: 100px;
   background-color: #00fffe;
-  width: 60px;
+  width: 80px;
   display: inline-block;
   float: right;
   margin-right: 80px;
@@ -77,13 +82,16 @@ img {
 }
 
 #userScore {
-  width: 150px;
+  width: 300px;
   background-color: #00a799;
-  display: inline-block;
 }
 
-#userScore p {
-  margin: 2px;
+.scoreSpacing-1 {
+  display: block;
+}
+
+.scoreSpacing-2 {
+  display: block;
 }
 
 #wins, #losses{
